# langlang

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  README.org  ast.go  base_parser.go  common.mk  debug.h  error.h  errors.go  flake.nix  gen_go.go  grammar_ast.go  grammar_parser.go  grammar_parser_test.go  io.h  justfile  match.c  package.json  parser.go  peg.c  peg.h  peg.py  sketch.org  test.c  value.c  value.go  value.h  vm.c  vm.h
.github/workflows/: go.yml  rust.yml
bench/: Makefile  bench.c  csv0.pegx  gendata.py  json0.pegx
benchmarks/: benchmarks_external_test.go  benchmarks_test.go  go.mod  go.sum  json.go  json.nocap.go  run
benchmarks/input/: input_30kb.json
benchmarks/pigeon_json/: json.pigeon.peg
benchmarks/pointlander_json/: json.pointlander.peg
benchmarks/pointlander_json_stripped/: json.stripped.pointlander.peg
benchmarks/treesitter_json/: treesitter_json.go
cli/: build.ts  tsconfig.json
cmd/: main.go
docs/: capturevalues.org  compilers.org  index.html  parsingvm.org  peg.org  roadmap.org
docs/assets/: go-DL7aBJC8.js  index-3xJOlhFD.js  (+21 more)
examples/sysdcl/: Cargo.toml  LICENSE_MIT  example-tiny.sysdcl  example-web.sysdcl  example.sysdcl  grammar.peg
examples/sysdcl/src/: lib.rs
examples/sysdcl/www/: index.html  index.js  package-lock.json  package.json
extra/: peg-mode.el
go/: Makefile  README.org  api.go  api_internal.go  api_test.go  base_parser.go  builtins.peg  config.go  errors.go  exhaustiveness.go  exhaustiveness_test.go  gen.go  gen_go.go  gen_go_eval.go  gen_javascript.go  gen_py.go  gen_rewrite.go  gen_rewrite_test.go  gen_ts.go  genc.go  go.mod  gomod2nix.toml  grammar_ast.go  grammar_ast_printer.go  grammar_ast_visitor.go  grammar_builtin_handler.go  grammar_capture_handler.go  grammar_charset_handler.go  grammar_compiler.go  grammar_import.go  grammar_import_loaders.go  grammar_import_loaders_test.go  grammar_parser.go  grammar_parser_bootstrap.go  grammar_parser_rewrite.go  grammar_parser_rewrite_test.go  grammar_parser_test.go  grammar_parser_v2.go  grammar_parser_wirth.go  grammar_parser_wirth_bootstrap.go  (+45 more)
grammars/: abnf.peg  css.peg  css2.1.peg  csv.peg  go.wirth  json.json  json.peg  langlang.langlang  langlang.peg  langlang_rewrite.peg  peg.peg  pegx.peg  python.peg  rfc3986.abnf  wirth.peg  wirth.wirth
js/: package.json
langlang/: Cargo.toml
langlang_lib/: Cargo.toml
langlang_lib/src/: ast.rs  builtins.peg  compiler.rs  consts.rs  format.rs  import.rs  lib.rs  parser.rs  tests.rs  vm.rs  wsrewrite.rs
langlang_serde/: Cargo.toml
langlang_syntax/: Cargo.toml
langlang_syntax/src/: ast.rs  error.rs  lib.rs  parser.rs  source_map.rs  visitor.rs
langlang_value/: Cargo.toml
lib/: Makefile  abnf.abnf  abnf.peg  abnf.pegx  csv.pegx  json.peg  langlang.peg  llgrammar.ll  peg.peg  peg.pegx  pegx.peg  pegx.pegx  resp.pegx
oldstuff/: Makefile  README.org  error.h  io.c  peg.h  value.c
react/: package.json
rust/: Cargo.toml
rust/langlang_lib/: Cargo.toml
rust/langlang_lib/src/: compiler.rs  consts.rs  import.rs  lib.rs  vm.rs
rust/langlang_value/: Cargo.toml
rust/langlang_value/src/: format.rs  lib.rs  source_map.rs  visitor.rs
rust/tests/: Cargo.toml  import_gr_number.peg  import_gr_string.peg  import_gr_value.peg  import_integration.rs  shelltest.peg  unit.rs  wshinsert.rs
rust/tests/err/: tinyjava.peg
rust/tests/lists/: 0.peg
rust/tests/lr/: lr.arith.1.input  lr.arith.2.input  lr.arith.3.input  lr.arith.4.input  lr2.peg  lr3.peg  lr4.peg  lr5.peg
scripts/: graph_benches.py
src/: ast.rs  compiler.rs  format.rs  lib.rs  parser.rs  tests.rs  vm.rs
tests/: 0.java  1.java  Cargo.toml  basic.peg  basic_test.go  choice.peg  follows.peg  shelltest.peg  tinyjava.labels.peg  tinyjava.peg  unit.rs  wshinsert.peg  wshinsert.rs  zom.peg
viz/: .gitignore
wasm/: package.json  types.d.ts
web/: index.html  package.json  vite.config.ts
(+881 files in other folders)
