[package]
name = "langlang_lib"
version = "0.1.2"
authors = ["Lincoln de Sousa <lincoln@clarete.li>"]
edition = "2021"
description = "langlang is a parser generator based on Parsing Expression Grammars (library)"
homepage = "https://github.com/clarete/langlang"
repository = "https://github.com/clarete/langlang"
license = "GPL-3.0-or-later"
documentation = "https://docs.rs/langlang_lib"
readme = "../README.md"

[dependencies]
langlang_syntax = { path = "../langlang_syntax", version = "0.1.2" }
langlang_value = { path = "../langlang_value", version = "0.1.2" }
