[package]
name = "tests"
version = "0.0.1"
edition = "2021"
publish = false

[dev-dependencies]
langlang_lib = { path = "../langlang_lib" }
langlang_syntax = { path = "../langlang_syntax" }
langlang_value = { path = "../langlang_value" }

[[test]]
name = "unit"
path = "unit.rs"

[[test]]
name = "wshinsert"
path = "wshinsert.rs"

[[test]]
name = "import_integration"
path = "import_integration.rs"
